# llm-penandpaper

./: .gitignore  Dockerfile  LICENSE  README.md  debug_tts.py  image_gen_utils.py  litellm.yaml  penandpaper.py  penandpaper_streamlit.py  pyproject.toml  run_app.sh  test.ipynb  test_features.py  tts_utils.py
.github/workflows/: ci.yml  docker.yml
game_docs/: storyline.txt  world_description.md
